delete UserNotFoundException add to Appuser the attribute "authorities" add UserRepo and edited App userService to load data from MongoDB graphical fix: picture in Details cannot get too big

--- a/frontend/src/formular/editAddDetails.css
+++ b/frontend/src/formular/editAddDetails.css
@@ -41,7 +41,9 @@
 }
 
 .fullView img {
-    width: 90%;
+    max-width: 90vw;
+    min-width: 50vw;
+    max-height: 50vh;
     border-radius: 5px;
 }
 
